--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/stvischer/todo-list#readme",
   "dependencies": {
-    "express": "^4.15.2"
+    "config": "^1.25.1",
+    "express": "^4.15.2",
+    "hbs": "^4.0.1"
   }
 }
